# No-Comment-Booking

./: .env.server.example  .gitattributes  .gitignore  Dockerfile  README.md  build_exe.ps1  pyproject.toml  run.py
.github/workflows/: verify.yml
docs/: ARCHITECTURE.md  SECURITY.md
provtidsbevakaren/: __init__.py  auth.py  bankid.py  catalog.py  engine.py  launcher.py  runtime.py  settings.py  storage.py  web.py
provtidsbevakaren/static/: app.js  index.html  styles.css
scripts/: security_scan.py
tests/: test_bankid_catalog.py  test_engine.py  test_settings_auth_storage.py  test_web.py
