[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provtidsbevakaren"
version = "2.0.0"
description = "Local-first monitoring service with an opt-in server runtime"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=44,<47",
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "requests>=2.32,<3",
  "selenium>=4.27,<5",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = ["httpx2>=2.7,<3", "pyinstaller>=6.11,<7", "pytest>=8.3,<9", "ruff>=0.12,<1"]

[project.scripts]
provtidsbevakaren = "provtidsbevakaren.launcher:main"

[tool.setuptools.package-data]
provtidsbevakaren = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501"]
